--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blocknote/core": "^0.31.1",
+    "@blocknote/mantine": "^0.31.1",
+    "@blocknote/react": "^0.31.1",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@supabase/supabase-js": "^2.49.4",
     "class-variance-authority": "^0.7.1",
